# lib2geom

./: .bzrignore  .gitignore  .gitlab-ci.yml  .hidden  .travis.yml  2dsb2d.cpp  2geom-tolua.pkg  2geom.pc.in  2geom.rb  6-int.han  AUTHORS  CMakeLists.txt  COPYING  DC-conic-4.cpp  Doxyfile  HACKING.txt  Makefile  NEWS.md  README.md  README.win32  RELEASING.md  TODO  arc-bez.cpp  arc-length.cpp  arc-length.h  bez-test.cpp  bezier-to-sbasis.h  bezier-utils-test.cpp  bezier-utils.cpp  bezier-utils.h  beztype.cpp  centroid.cpp  centroid.h  cheb.cpp  choose_test.cpp  circulator.h  clothoid.cpp  conic-2.cpp  conic-3.cpp  conic-4.cpp  (+134 more)
src/: 2geom.rb  CMakeLists.txt  Shape.cpp  Shape.h  arc-length.cpp  arc-length.h  b-spline.cpp  basic-intersection.cpp  basic-intersection.h  bezier-to-sbasis.h  bezier-utils.cpp  bezier-utils.h  bezier.h  beztype.cpp  centroid.cpp  centroid.h  chebyshev.cpp  chebyshev.h  choose.h  circle-circle.cpp  circulator.h  concepts.h  conjugate_gradient.cpp  conjugate_gradient.h  contour.cpp  convex-cover.cpp  convex-cover.h  convex-hull-ops.h  coord.h  crossing.cpp  crossing.h  cubic_bez_util.h  d2-sbasis.cpp  d2.cpp  d2.h  dim2.h  elliptical-arc.cpp  epsilon.h  eraser-test.cpp  exception.h  (+135 more)
src/2geom/: 2geom.rb  CMakeLists.txt  affine.cpp  affine.h  angle.h  arc-length.cpp  arc-length.h  basic-intersection.cpp  basic-intersection.h  bezier-clipping.cpp  bezier-curve.cpp  bezier-curve.h  bezier-utils-work.txt  bezier-utils.cpp  bezier.cpp  bezier.h  cairo-path-sink.cpp  cairo-path-sink.h  choose.h  circle.cpp  circle.h  concepts.cpp  concepts.h  config.h.cmake  conic_section_clipper.cpp  conic_section_clipper.h  conic_section_clipper_impl.cpp  conic_section_clipper_impl.h  conicsec.cpp  conicsec.h  conjugate_gradient.cpp  conjugate_gradient.h  convex-cover.cpp  convex-cover.h  convex-hull.cpp  convex-hull.h  coord.cpp  coord.h  crossing.cpp  crossing.h  (+115 more)
src/2geom/cython-bindings/: CMakeLists.txt  README  _common_decl.pxd  _common_decl.pyx  _cy_affine.pxd  _cy_affine.pyx  _cy_angle.pyx  _cy_conicsection.pxd  _cy_conicsection.pyx  _cy_curves.pxd  _cy_curves.pyx  _cy_path.pxd  _cy_path.pyx  _cy_point.pyx  _cy_primitives.pxd  _cy_primitives.pyx  _cy_rectangle.pxd  _cy_rectangle.pyx  _cy_shape.pxd  _cy_shape.pyx  cy2geom.pyx  hacks.h  report.md  test-affine.py  test-conicsection.py  test-curves.py  test-path.py  test-primitives.py  test-rectangle.py  test_angle.py  test_point.py  utils.py  wrapped-pyobject.h  wrapper.py
src/2geom/inkconv/: nrbpath.cpp
src/2geom/intervaltree/: interval_tree.cc  interval_tree.h  test2.cc
src/2geom/numeric/: fitting-model.h  fitting-tool.h  linear_system.h  matrix.cpp  matrix.h  symmetric-matrix-fs-operation.h  symmetric-matrix-fs-trace.h  symmetric-matrix-fs.h  vector.h
src/2geom/orphan code/: arc-length.h
src/2geom/orphan-code/: arc-length.h  intersection-by-bezier-clipping.cpp  intersection-by-smashing.cpp  intersection-by-smashing.h  linear-of.h  linearN.h  nearestpoint.cpp  redblack-toy.cpp  redblacktree.h  rtree.cpp  rtree.h  sbasis-of.h  sbasisN.h
src/2geom/performance-tests/: CMakeLists.txt  bendpath-test.cpp  bendpath.cpp  bezier-utils-test.cpp  example-performance-test.cpp  parse-svg-test.cpp  parse-svg.cpp  path-operations.cpp
src/2geom/py2geom/: CMakeLists.txt  bezier.cpp  cairo-helpers.cpp  cairo-helpers.h  circle.cpp  conic.cpp  convexcover.cpp  crossing.cpp  d2.cpp  ellipse.cpp  etc.cpp  helpers.h  (+15 more)
src/cython/: _common_decl.pxd  _cy_affine.pxd  _cy_conicsection.pxd  _cy_conicsection.pyx  _cy_curves.pxd  _cy_curves.pyx  _cy_path.pxd  _cy_path.pyx  _cy_primitives.pxd  _cy_primitives.pyx  _cy_rectangle.pxd  _cy_rectangle.pyx  report.md  test-affine.py  test-conicsection.py  test-curves.py  test-primitives.py  utils.py  wrapped-pyobject.h
src/gtest/: CMakeLists.txt  gtest-all.cc
src/inkconv/: livarot.cpp  livarot.h  nrbpath.h  prim.cpp
src/numeric/: matrix.h  vector.h
src/performance-tests/: CMakeLists.txt  bezier-utils-test.cpp  boolops-performance-test.cpp  example-performance-test.cpp
src/py2geom/: CMakeLists.txt  __init__.py  bezier.cpp  cairo-helpers.cpp  cairo-helpers.h  circle.cpp  conic.cpp  convexcover.cpp  crossing.cpp  d2.cpp  ellipse.cpp  etc.cpp  helpers.h  interval.cpp  line.cpp  linear.cpp  linear.h  md-pw-sb.cpp  md-pw-sb.h  multidimsbasis.cpp  multidimsbasis.h  parser.cpp  path.cpp  point.cpp  point.h  pw-sb.cpp  pw-sb.h  pw.cpp  pw.h  py2geom.cpp  py2geom.h  ray.cpp  rect.cpp  sbasis.cpp  sbasis.h  transforms.cpp  transforms.h
src/python/: 2geom.cpp  CMakeLists.txt  cy2geom_example.py  elip.py  py2geom.cpp  test_lib2geom.py  test_py2geom.py
src/tests/: CMakeLists.txt  angle-test.cpp  bez-test.cpp  bezier-sbasis-transforms.py  bezier-subdivision-test.cpp  bezier-test.cpp  bezier-utils-test.cpp  choose-test.cpp  circle-test.cpp  convex-hull-test.cpp  coord-test.cpp  ellipse-test.cpp  elliptical-arc-test.cpp  intersection-graph-test.cpp  intersection-test.cpp  lin_alg_test.cpp  linalg-test.cpp  line-test.cpp  matrix-test.cpp  mersennetwister.h  nearest-point-point-elliptic-arc-test.cpp  nl-vector-test.cpp  parser-test.py  path-test.cpp  point-test.cpp  poly-test.cpp  polynomial-test.cpp  py2geom  rect-test.cpp  root-find-test.cpp  root-find-ut.cpp  rotate-fns-test.cpp  rotate-fns-test.h  rotate-test.cpp  rotate-test.h  sbasis-test.cpp  sbasis-text-test.cpp  scale-test.h  test_pwsb.py  test_py2geom.py  (+3 more)
src/toys/: 2dsb2d.cpp  4rect.svgd  CMakeLists.txt  DC-conic-4.cpp  aa.cpp  arc-bez.cpp  arc-length-param.cpp  arcurvature.cpp  b-spline.cpp  bez-grad.cpp  bezier-subdivision.cpp  boolops-toy.cpp  boolops.cpp  bound-path.cpp  bounds-test.cpp  box3d-2.cpp  box3d.cpp  center-warp.cpp  cheb.cpp  circle-fitting.cpp  circle-intersect.cpp  circle-line-intersect.cpp  circle-tangent-fitting.cpp  clothoid.cpp  collinear-normal.cpp  conic-2.cpp  conic-3.cpp  conic-4.cpp  conic-5.cpp  conic-6.cpp  conic-section-toy.cpp  conic.cpp  contour.cpp  convex-toy.cpp  convole.cpp  curvature-curve.cpp  curvature-test.cpp  curve-curve-distance.cpp  curve-curve-furthest-time.cpp  curve-curve-nearest-time.cpp  (+138 more)
(+340 files in other folders)
