SET(2GEOM_BOOST_PYTHON_SRC
py2geom.cpp
)

OPTION(2GEOM_BOOST_PYTHON
  "Build a python binding with Boost.Python"
  OFF)
IF(2GEOM_BOOST_PYTHON)
        FIND_PACKAGE(Boost)
 	FIND_PACKAGE(PythonLibs)
        GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL "${PYTHON_LIBRARY}" PATH)
        GET_FILENAME_COMPONENT(SITEPACKAGE "${PYTHON_LIB_INSTALL}/../site-packages" ABSOLUTE)

 	INCLUDE_DIRECTORIES( src/ ${PYTHON_INCLUDE_PATH}
 	                    ${BOOST_INCLUDE_DIR} )

        ADD_LIBRARY(py2geom SHARED ${2GEOM_BOOST_PYTHON_SRC})
        SET_TARGET_PROPERTIES(py2geom PROPERTIES PREFIX "_")
        TARGET_LINK_LIBRARIES(py2geom 2geom ${PYTHON_LIBRARIES} ${BOOST_PYTHON_LIBRARY})

        INSTALL(TARGETS py2geom DESTINATION "${SITEPACKAGE}/py2geom")
        INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" DESTINATION "${SITEPACKAGE}/py2geom")

ENDIF(2GEOM_BOOST_PYTHON)
