SET(2GEOM_BOOST_PYTHON_SRC
2geom.cpp
)

OPTION(2GEOM_BOOST_PYTHON
  "Build a python binding with Boost.Python"
  OFF)
IF(2GEOM_BOOST_PYTHON)
        FIND_PACKAGE(Boost)
 	FIND_PACKAGE(PythonLibs)
 	INCLUDE_DIRECTORIES( src/ ${PYTHON_INCLUDE_PATH}
 	                    ${BOOST_INCLUDE_DIR} )

        ADD_LIBRARY(2geom_py ${LIB_TYPE} ${2GEOM_BOOST_PYTHON_SRC})
        TARGET_LINK_LIBRARIES(2geom_py 2geom ${PYTHON_LIBRARIES} ${BOOST_PYTHON_LIBRARY})
ENDIF(2GEOM_BOOST_PYTHON)
