SET(2GEOM_BOOST_PYTHON_SRC
py2geom.cpp
)

OPTION(2GEOM_BOOST_PYTHON
  "Build a python binding with Boost.Python"
  OFF)
IF(2GEOM_BOOST_PYTHON)
        FIND_PACKAGE(Boost)
 	FIND_PACKAGE(PythonLibs)
 	INCLUDE_DIRECTORIES( src/ ${PYTHON_INCLUDE_PATH}
 	                    ${BOOST_INCLUDE_DIR} )

        ADD_LIBRARY(py2geom SHARED ${2GEOM_BOOST_PYTHON_SRC})
        SET_TARGET_PROPERTIES(py2geom PROPERTIES PREFIX "_")
        TARGET_LINK_LIBRARIES(py2geom 2geom ${PYTHON_LIBRARIES} ${BOOST_PYTHON_LIBRARY})
ENDIF(2GEOM_BOOST_PYTHON)
